--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,3 +80,7 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.AutoExposure=False
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
+
