menu focus widget

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameName=CursedGuy
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
