--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,3 +84,6 @@ r.DefaultFeature.AutoExposure=False
 IconModelPath=(Path="")
 IconPortalPath=(Path="")
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Never
+
